Fixed image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   kcptun_server:
     restart: always
-    image: wan0eve/drone-android:latest
+    image: wan0eve/kcptun-server:latest
     environment:
       - kcp_out_port=8080
       - kcp_in_addr=localhost:7676
